--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<title>Jesús de Nazareth</title>
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i" rel="stylesheet">
-	<link rel="stylesheet" href="css1/fontello.css">
-	<link rel="stylesheet" href="css1/estilos.css">
+	<link rel="stylesheet" href="css/css1/fontello.css">
+	<link rel="stylesheet" href="css/css1/estilos.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js" integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR" crossorigin="anonymous"></script>
 	<style>
 		.logo {
@@ -32,10 +32,9 @@
 				</div>
 				<div class="col-4 text-center">
 					<a href="blog.html" class="text-dark logo">Jesús de Nazareth</a>
-					
+
 				</div>
 				<div class="col-4 d-flex justify-content-end align-items-center">
-					<a href="#" class="text-muted mx-3"><i class="fas fa-search"></i></a>
 					<a href="login.html" class="btn btn-outline-secondary btn-sm">Acceder</a>
 				</div>
 			</div>
@@ -62,13 +61,13 @@
 						</ol>
 						<div class="carousel-inner">
 							<div class="carousel-item">
-								<img src="img/slide1.jpg" alt="Slide #1" class="d-block img-fluid">
+								<img src="images/img/slide1.jpg" alt="Slide #1" class="d-block img-fluid">
 							</div>
 							<div class="carousel-item active carousel-item-left">
-								<img src="img/slide2.jpg" alt="Slide #2" class="d-block img-fluid">
+								<img src="images/img/slide2.jpg" alt="Slide #2" class="d-block img-fluid">
 							</div>
 							<div class="carousel-item carousel-item-next carousel-item-left">
-								<img src="img/slide3.jpg" alt="Slide #3" class="d-block img-fluid">
+								<img src="images/img/slide3.jpg" alt="Slide #3" class="d-block img-fluid">
 							</div>
 						</div>
 
@@ -194,5 +193,11 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/js1/jquery-3.3.1.min.js"></script>
+	<script src="js/js1/popper.min.js"></script>
+	<script src="js/js1/bootstrap.min.js"></script>
+	<script src="js/js1/scripts.js"></script>
+	<script src="js/js/bootstrap.min.js"></script>
 </body>
 </html>
