--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -184,6 +184,9 @@
 					<a href="twitter.com" class="icono icon-twitter twitter"></a>
 					<a href="instragram.com" class="icono icon-instagram instagram"></a>
 					<a href="facebook.com" class="icono icon-facebook facebook"></a>
+					<a href="twitter.com" class="icono icon-youtube youtube"></a>
+					<a href="instragram.com" class="icono icon-whatsapp whatsapp"></a>
+					<a href="facebook.com" class="icono icon-messenger messenger"></a>
 				</div>
 			</div>
 		</div>
