--- a/WebContent/nosotros.html
+++ b/WebContent/nosotros.html
@@ -62,13 +62,13 @@
 						</ol>
 						<div class="carousel-inner">
 							<div class="carousel-item">
-								<img src="images/foto3delslideshow modified.jpg" alt="Slide #1" class="d-block img-fluid">
+								<img src="images/img/slide1.jpg" alt="Slide #1" class="d-block img-fluid">
 							</div>
 							<div class="carousel-item active carousel-item-left">
-								<img src="images/foto1delslideshow modified.jpg" alt="Slide #2" class="d-block img-fluid">
+								<img src="images/img/slide2.jpg" alt="Slide #2" class="d-block img-fluid">
 							</div>
 							<div class="carousel-item carousel-item-next carousel-item-left">
-								<img src="images/foto2delslideshow modified.jpg" alt="Slide #3" class="d-block img-fluid">
+								<img src="images/img/slide3.jpg" alt="Slide #3" class="d-block img-fluid">
 							</div>
 						</div>
 
@@ -116,6 +116,66 @@
 			</div>
 		</div>
 	</div>
+
+	<main class="container">
+		<div class="row">
+			<div class="col-md-8 mb-5 pb-5">
+				<h3 class="pb-3 mb-4 font-italic border-bottom">Lorem, ipsum dolor.</h3>
+				<div class="mb-5 border-bottom pb-5">
+					<h2 class="titulo">Ejemplo de post de blog</h2>
+					<p class="text-muted mb-4">Enero 1, 2018 por <a href="#">I.E.P. Jesús de Nazareth</a></p>
+					<p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+					<p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+					<p>Etiam porta sem malesuada magna mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+
+				<div class="mb-5 border-bottom pb-5">
+					<h2 class="titulo">Ejemplo de post de blog</h2>
+					<p class="text-muted mb-4">Enero 1, 2018 por <a href="#">I.E.P. Jesús de Nazareth</a></p>
+					<p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+					<p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+					<p>Etiam porta sem malesuada magna mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+
+				<div class="mb-5 border-bottom pb-5">
+					<h2 class="titulo">Ejemplo de post de blog</h2>
+					<p class="text-muted mb-4">Enero 1, 2018 por <a href="#">Carlos</a></p>
+					<p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+					<p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+					<p>Etiam porta sem malesuada magna mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+
+				<nav>
+					<a href="#" class="btn btn-outline-primary">Articulos Antiguos</a>
+					<a href="#" class="btn btn-outline-secondary">Articulos Nuevos</a>
+				</nav>
+			</div>
+			<div class="col-md-4 mb-5 pb-5">
+				<div class="p-3 mb-3 bg-light rounded">
+					<h4 class="font-italic">Acerca de</h4>
+					<p class="mb-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad dolor omnis praesentium reprehenderit quidem accusamus voluptate mollitia repellendus similique rerum!</p>
+				</div>
+
+				<div class="p-3">
+					<h4 class="font-italic">Archivos</h4>
+					<ol class="list-unstyled">
+						<li><a href="#">Enero 2017</a></li>
+						<li><a href="#">Febrero 2017</a></li>
+						<li><a href="#">Marzo 2017</a></li>
+						<li><a href="#">Abril 2017</a></li>
+						<li><a href="#">Mayo 2017</a></li>
+						<li><a href="#">Junio 2017</a></li>
+						<li><a href="#">Julio 2017</a></li>
+						<li><a href="#">Agosto 2017</a></li>
+						<li><a href="#">Septiembre 2017</a></li>
+						<li><a href="#">Octubre 2017</a></li>
+						<li><a href="#">Noviembre 2017</a></li>
+						<li><a href="#">Diciembre 2017</a></li>
+					</ol>
+				</div>
+			</div>
+		</div>
+	</main>
 
 	<footer>
 		<div class="container">
