--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,30 +28,27 @@
 	<div class="container">
 		<header class="py-3">
 			<div class="row flex-nowrap justify-content-between align-items-center">
-				<div class="col-4 d-flex justify-content-start align-items-center">
-					<a href="Registrar.jsp" class="btn btn-outline-secondary btn-sm">Registrarse</a>
+				<div class="col-3 d-flex justify-content-start align-items-center">
+					<a href="Registrar.jsp" class="btn btn-dark btn-lg">Registrarse</a>
 				</div>
-				<div class="col-4 text-center">
-					<a href="index.html" class="text-dark logo">Jesús de Nazareth</a>
-
+				<div class="col-6 text-center">
+					<a href="index.html" class="text-dark text-uppercase logo">Jesús de Nazareth</a>
 				</div>
-				<div class="col-4 d-flex justify-content-end align-items-center">
-					<a href="login.jsp" class="btn btn-outline-secondary btn-sm">Acceder</a>
+				<div class="col-3 d-flex justify-content-end align-items-center">
+					<a href="login.jsp" class="btn btn-dark btn-lg">Acceder</a>
 				</div>
 			</div>
 
 			<hr>
 		</header>
-
 		<div class="nav-scroller py-1 mb-4">
 			<nav class="d-flex flex-wrap justify-content-between">
-				<a href="index.html" class="text-muted mx-2 my-1">Home</a>
-				<a href="nosotros.html" class="text-muted mx-2 my-1">Nosotros</a>
-				<a href="nuestrosservicios.html" class="text-muted mx-2 my-1">Nuestros servicios</a>
-				<a href="contactenos.html" class="text-muted mx-2 my-1">Contáctenos</a>
+				<a href="index.html" class="btn btn-dark btn-lg mx-2 my-1" role="button" aria-pressed="true">Menú Principal</a>
+				<a href="nosotros.html" class="btn btn-dark btn-lg mx-2 my-1" role="button" aria-pressed="true">Nosotros</a>
+				<a href="nuestrosservicios.html" class="btn btn-dark btn-lg mx-2 my-1" role="button" aria-pressed="true">Nuestros Servicios</a>
+				<a href="contactenos.html" class="btn btn-dark btn-lg mx-2 my-1" role="button" aria-pressed="true">Contáctenos</a>
 			</nav>
 		</div>
-
 		<div class="row slider">
 				<div class="col">
 					<div class="carousel slide" id="slider" data-ride="carousel">
@@ -83,7 +80,6 @@
 					</div>
 				</div>
 			</div>
-
 		<div class="row mb-3">
 			<div class="col-md-6">
 				<div class="card flex-md-row mb-4">
@@ -99,7 +95,6 @@
 					<img class="card-img-right flex-auto d-none d-lg-block w-100" src="http://via.placeholder.com/200x250/55595C?text=Thumbnail" alt="">
 				</div>
 			</div>
-
 			<div class="col-md-6">
 				<div class="card flex-md-row mb-4">
 					<div class="card-body d-flex flex-column align-items-start">
