agregando cambios del index y de nosotros.html

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/css1/estilos.css">
 	<link rel="stylesheet" href="iconos1/style.css">
 	<link rel="stylesheet" href="css/estilos-nav.css">
+	<link rel="stylesheet" href="css/estilos-slideshow.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js" integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR" crossorigin="anonymous"></script>
 	<style>
 		.logo {
@@ -26,24 +27,19 @@
 	</style>
 </head>
 <body>
-	<div class="container">
+	<div class="container ">
 		<header>
-
                 <div class="logo">
-                    <img src="images/jn-logo.png" alt="" width="80" height="60">
-                    <a href="index.html">Jesús de Nazareth</a>
-                </div>
-
+                    <a href="index.html"><img src="images/jn-logo.png" alt="" width="80" height="60"> Jesús de Nazareth</a>
+				</div>
                 <nav>
                     <a href="index.html"><span class="uno"></span><i class="icon-home"></i>Inicio</a>
-                    <a href="#"><span class="dos"></span><i class=" icon icon-book"></i>Articulos</a>
-                    <a href="#"><span class="tres"></span><i class=" icon icon-bubbles4"></i>Informacion</a>
-                    <a href="#"><span class="cuatro"></span><i class=" icon icon-rocket"></i>Proyectos</a>
-                    <a href="#"><span class="cinco"></span><i class=" icon icon-newspaper"></i>Noticias</a>
+                    <a href="nosotros.html"><span class="dos"></span><i class=" icon icon-book"></i>Nosotros</a>
+                    <a href="nuestros-servicios.html"><span class="tres"></span><i class=" icon icon-rocket"></i>Nuestros Servicios</a>
+                    <a href="contactenos.html"><span class="cuatro"></span><i class=" icon icon-bubbles4"></i>Contáctenos</a>
                 </nav>
-
 		</header>
-		<div class="row slider">
+		<div class="row slider ">
 				<div class="col">
 					<div class="carousel slide" id="slider" data-ride="carousel">
 						<ol class="carousel-indicators">
@@ -51,16 +47,16 @@
 							<li data-target="#slider" data-slide-to="1" class=""></li>
 							<li data-target="#slider" data-slide-to="2" class="active"></li>
 						</ol>
-						<div class="carousel-inner">
-							<div class="carousel-item">
-								<img src="images/foto3delslideshow modified.jpg" alt="Slide #1" class="d-block img-fluid">
-							</div>
-							<div class="carousel-item active carousel-item-left">
-								<img src="images/foto1delslideshow modified.jpg" alt="Slide #2" class="d-block img-fluid">
-							</div>
-							<div class="carousel-item carousel-item-next carousel-item-left">
-								<img src="images/foto2delslideshow modified.jpg" alt="Slide #3" class="d-block img-fluid">
-							</div>
+						<div class="carousel-inner " >
+								<div class="carousel-item ">
+									<img src="images/foto3delslideshow modified.jpg" alt="Slide #1" class="d-block img-fluid">
+								</div>
+								<div class="carousel-item active carousel-item-left  ">
+									<img src="images/foto1delslideshow modified.jpg" alt="Slide #2" class="d-block img-fluid">
+								</div>
+								<div class="carousel-item carousel-item-next carousel-item-left  ">
+									<img src="images/foto2delslideshow modified.jpg" alt="Slide #3" class="d-block img-fluid ">
+								</div>
 						</div>
 
 						<a href="#slider" class="carousel-control-prev" data-slide="prev">
