--- a/WebContent/nuestros-servicios.html
+++ b/WebContent/nuestros-servicios.html
@@ -9,8 +9,6 @@
 	<link rel="stylesheet" href="css/css1/fontello.css">
 	<link rel="stylesheet" href="css/css1/estilos.css">
 	<link rel="stylesheet" href="iconos1/style.css">
-	<link rel="stylesheet" href="css/estilos-nav.css">
-	<link rel="stylesheet" href="css/estilos-slideshow.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js" integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR" crossorigin="anonymous"></script>
 	<style>
 		.logo {
@@ -29,46 +27,61 @@
 <body>
 	<div class="container">
 		<header class="py-3">
-			<div class="logo">
-				<a href="index.html"><img src="images/jn-logo.png" alt="" width="80" height="60"> Jesús de Nazareth</a>
-			</div>
-			<nav>
-				<a href="index.html"><span class="uno"></span><i class="icon-home"></i>Inicio</a>
-				<a href="nosotros.html"><span class="dos"></span><i class=" icon icon-book"></i>Nosotros</a>
-				<a href="nuestros-servicios.html"><span class="tres"></span><i class=" icon icon-rocket"></i>Nuestros Servicios</a>
-				<a href="contactenos.html"><span class="cuatro"></span><i class=" icon icon-bubbles4"></i>Contáctenos</a>
-			</nav>
-		</header>
-		<div class="row slider">
-			<div class="col">
-				<div class="carousel slide" id="slider" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#slider" data-slide-to="0" class=""></li>
-						<li data-target="#slider" data-slide-to="1" class=""></li>
-						<li data-target="#slider" data-slide-to="2" class="active"></li>
-					</ol>
-					<div class="carousel-inner " >
-							<div class="carousel-item ">
-								<img src="images/foto3delslideshow modified.jpg" alt="Slide #1" class="d-block img-fluid">
-							</div>
-							<div class="carousel-item active carousel-item-left  ">
-								<img src="images/foto1delslideshow modified.jpg" alt="Slide #2" class="d-block img-fluid">
-							</div>
-							<div class="carousel-item carousel-item-next carousel-item-left  ">
-								<img src="images/foto2delslideshow modified.jpg" alt="Slide #3" class="d-block img-fluid ">
-							</div>
-					</div>
-					<a href="#slider" class="carousel-control-prev" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Anterior</span>
-					</a>
-					<a href="#slider" class="carousel-control-next" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Siguiente</span>
-					</a>
+			<div class="row flex-nowrap justify-content-between align-items-center">
+				<div class="col-4 d-flex justify-content-start align-items-center">
+					<a href="Registrar.jsp" class="btn btn-outline-secondary btn-sm">Registrarse</a>
+				</div>
+				<div class="col-4 text-center">
+					<a href="index.html" class="text-dark logo">Jesús de Nazareth</a>
+				</div>
+				<div class="col-4 d-flex justify-content-end align-items-center">
+					<a href="login.jsp" class="btn btn-outline-secondary btn-sm">Acceder</a>
 				</div>
 			</div>
+
+			<hr>
+		</header>
+
+		<div class="nav-scroller py-1 mb-4">
+			<nav class="d-flex flex-wrap justify-content-between">
+				<a href="index.html" class="text-muted mx-2 my-1">Home</a>
+				<a href="nosotros.html" class="text-muted mx-2 my-1">Nosotros</a>
+				<a href="nuestrosservicios.html" class="text-muted mx-2 my-1">Nuestros servicios</a>
+				<a href="contactenos.html" class="text-muted mx-2 my-1">Contáctenos</a>
+			</nav>
 		</div>
+
+		<div class="row slider">
+				<div class="col">
+					<div class="carousel slide" id="slider" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#slider" data-slide-to="0" class=""></li>
+							<li data-target="#slider" data-slide-to="1" class=""></li>
+							<li data-target="#slider" data-slide-to="2" class="active"></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item">
+								<img src="images/img/slide1.jpg" alt="Slide #1" class="d-block img-fluid">
+							</div>
+							<div class="carousel-item active carousel-item-left">
+								<img src="images/img/slide2.jpg" alt="Slide #2" class="d-block img-fluid">
+							</div>
+							<div class="carousel-item carousel-item-next carousel-item-left">
+								<img src="images/img/slide3.jpg" alt="Slide #3" class="d-block img-fluid">
+							</div>
+						</div>
+
+						<a href="#slider" class="carousel-control-prev" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Anterior</span>
+						</a>
+						<a href="#slider" class="carousel-control-next" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Siguiente</span>
+						</a>
+					</div>
+				</div>
+			</div>
 
 		<div class="row mb-3">
 			<div class="col-md-6">
