--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,35 +13,34 @@
     <title>Bent | App Landing Page</title>
     <!-- Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:500,600,700,800,900,400,300' rel='stylesheet' type='text/css'>
-
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="pagina/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Owl Carousel Assets -->
-    <link href="css/owl.carousel.css" rel="stylesheet">
-    <link href="css/owl.theme.css" rel="stylesheet">
+    <link href="pagina/css/owl.carousel.css" rel="stylesheet">
+    <link href="pagina/css/owl.theme.css" rel="stylesheet">
 
 
     <!-- Pixeden Icon Font -->
-    <link rel="stylesheet" href="css/Pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="pagina/css/Pe-icon-7-stroke.css">
 
     <!-- Font Awesome -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="pagina/css/font-awesome.min.css" rel="stylesheet">
 
 
     <!-- PrettyPhoto -->
-    <link href="css/prettyPhoto.css" rel="stylesheet">
+    <link href="pagina/css/prettyPhoto.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="pagina/favicon.ico" />
 
     <!-- Style -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="pagina/css/style.css" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
+    <link href="pagina/css/animate.css" rel="stylesheet">
     <!-- Responsive CSS -->
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="pagina/css/responsive.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -79,7 +78,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="#">
-                            <img src="images/logo.png" alt="Logo">
+                            <img src="pagina/images/logo.png" alt="Logo">
                         </a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,11 +86,10 @@
                         <ul class="nav navbar-nav navbar-right">
                             <!-- NAV -->
                             <li><a href="#HOME">HOME</a> </li>
-                            <li><a href="#ABOUT">ABOUT </a> </li>
-                            <li><a href="#FEATURES">FEATURES</a></li>
-                            <li><a href="#SCREENS">SCREENS</a> </li>
-                            <li><a href="#DOWNLOAD">DOWNLOAD </a> </li>
-                            <li><a href="#CONTACT">CONTACT </a> </li>
+                            <li><a href="#ABOUT">NOSOTROS</a> </li>
+                            <li><a href="#FEATURES">NUESTROS SERVICIOS</a></li>
+                            <li><a href="#SCREENS">FOTOS</a> </li>
+                            <li><a href="#CONTACT">CONTÁCTANOS </a> </li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
@@ -104,7 +102,7 @@
                     <div class="col-md-12">
                         <div class="logo text-center">
                                 <!-- LOGO -->
-                            <img width="125" height="55" src="images/logo.png" alt="">
+                            <img width="90" height="55" src="images/jn-login3.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -124,7 +122,7 @@
                     </div>
                     <div class="col-md-3 col-md-offset-1 col-sm-4">
                         <div class="home-iphone">
-                            <img src="images/iPhone_Home.png" alt="">
+                            <img src="pagina/images/iPhone_Home.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -161,7 +159,7 @@
                     <div class="col-md-6">
                         <div class="about_phone wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                         <!-- PHONE -->
-                            <img src="images/about_iphone.png" alt="">
+                            <img src="pagina/images/about_iphone.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-6  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
@@ -263,7 +261,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
-                                                <img src="images/client_1.png" alt="">
+                                                <img src="pagina/images/client_1.png" alt="">
                                                 <div class="testimonial_caption">
                                                    <!-- DESCRIPTION -->
                                                     <h2>Dan Harmon</h2>
@@ -279,7 +277,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                  <!-- IMAGE -->
-                                                <img src="images/client_2.png" alt="">
+                                                <img src="pagina/images/client_2.png" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Allie Kingsley</h2>
@@ -295,7 +293,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
-                                                <img src="images/client_3.png" alt="">
+                                                <img src="pagina/images/client_3.png" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Joel Mchale</h2>
@@ -382,7 +380,7 @@
                     <div class="col-md-4">
                         <div class="feature_iphone">
                             <!-- FEATURE PHONE IMAGE -->
-                            <img class="wow bounceIn" data-wow-duration="1s" src="images/iPhone02.png" alt="">
+                            <img class="wow bounceIn" data-wow-duration="1s" src="pagina/images/iPhone02.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-4 left_no_padding wow fadeInRight" data-wow-duration="1s">
@@ -472,22 +470,22 @@
 
                     <!-- APPS SCREEN IMAGES -->
                     <div class="item">
-                    <a href="images/screens/iPhone04.png" rel="prettyPhoto[pp_gal]"><img src="images/iPhone04.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                    <a href="pagina/images/screens/iPhone04.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone04.png" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/screens/iPhone05.png" rel="prettyPhoto[pp_gal]"><img src="images/iPhone05.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="pagina/images/screens/iPhone05.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone05.png" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/screens/iPhone06.png" rel="prettyPhoto[pp_gal]"><img src="images/iPhone06.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="pagina/images/screens/iPhone06.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone06.png" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/screens/iPhone07.png" rel="prettyPhoto[pp_gal]"><img src="images/iPhone07.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="pagina/images/screens/iPhone07.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone07.png" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/screens/iPhone08.png" rel="prettyPhoto[pp_gal]"><img src="images/iPhone08.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="pagina/images/screens/iPhone08.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone08.png" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/screens/iPhone09.png" rel="prettyPhoto[pp_gal]"><img src="images/iPhone09.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="pagina/images/screens/iPhone09.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone09.png" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                 </div>
             </div>
@@ -546,90 +544,10 @@
 
     <!-- END FUN FACTS -->
 
-
-
-
-<!-- =========================
-     START DOWNLOAD NOW
-============================== -->
-    <section class="download page" id="DOWNLOAD">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <!-- DOWNLOAD NOW SECTION TITLE -->
-                    <div class="section_title">
-                        <h2>download now</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-                    </div>
-                    <!--END DOWNLOAD NOW SECTION TITLE -->
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <div class="download_screen text-center wow fadeInUp" data-wow-duration="1s">
-                        <img src="images/download_screen.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="available_store">
-            <div class="container  wow bounceInRight" data-wow-duration="1s">
-                <div class="col-md-6">
-                    <div class="available_title">
-                        <h2>Available on</h2>
-                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                    </div>
-                </div>
-
-                <!-- DOWNLOADABLE STORE -->
-                <div class="col-md-6">
-                    <div class="row">
-                        <a href="">
-                            <div class="col-md-4 no_padding">
-                                <div class="single_store">
-                                    <i class="fa fa-apple"></i>
-                                    <div class="store_inner">
-                                        <h2>iOS</h2>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <div class="col-md-4 no_padding">
-                            <a href="">
-                                <div class="single_store">
-                                    <i class="fa fa-android"></i>
-                                    <div class="store_inner">
-                                        <h2>ANDROID</h2>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4 no_padding">
-                            <a href="">
-                                <div class="single_store last">
-                                    <i class="fa fa-windows"></i>
-                                    <div class="store_inner">
-                                        <h2>WINDOWS</h2>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- END DOWNLOADABLE STORE -->
-            </div>
-        </div>
-    </section>
-    <!-- END DOWNLOAD -->
-
 <!-- =========================
      START CONTCT FORM AREA
 ============================== -->
-    <section class="contact page" id="CONTACT">
+    <section class="contact page">
         <div class="section_overlay">
             <div class="container">
                 <div class="col-md-10 col-md-offset-1 wow bounceIn">
@@ -673,27 +591,6 @@
                     <!-- END FORM -->
                 </div>
             </div>
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 wow bounceInLeft">
-                        <div class="social_icons">
-                            <ul>
-                                <li><a href=""><i class="fa fa-facebook"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-twitter"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-dribbble"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-behance"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-youtube-play"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- END CONTACT -->
@@ -702,9 +599,7 @@
      Start Subscription Form
 ============================== -->
 
-
-
-    <section class="subscribe parallax subscribe-parallax" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20">
+    <section class="subscribe parallax subscribe-parallax" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20" id="CONTACT">
         <div class="section_overlay wow lightSpeedIn">
             <div class="container">
                 <div class="row">
@@ -737,8 +632,26 @@
                                 <!-- SUBSCRIBE BUTTON -->
                             <button type="submit" class="btn btn-default subs-btn">Submit</button>
                         </form>
-
-
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 wow bounceInLeft">
+                                <div class="social_icons">
+                                    <ul>
+                                        <li><a href="https://www.facebook.com/InstitucionEducativaPrivadaJesusDeNazareth/"><i class="fa fa-facebook"></i></a>
+                                        </li>
+                                        <li><a href="http://www.twitter.com/InstitucionEducativaPrivadaJesusDeNazareth/"><i class="fa fa-twitter"></i></a>
+                                        </li>
+                                        <li><a href=""><i class="fa fa-dribbble"></i></a>
+                                        </li>
+                                        <li><a href=""><i class="fa fa-behance"></i></a>
+                                        </li>
+                                        <li><a href=""><i class="fa fa-youtube-play"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -777,7 +690,7 @@
 
 
 <!-- =========================
-     SCRIPTS 
+     SCRIPTS
 ============================== -->
 
 
